[tool.poetry]
name = "quickproxy"
version = "0.3.0"
description = "A lightweight, per-request customizable HTTP proxy for python."
authors = ["Cole <cole@colevscode.io>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.8.2"
tornado = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
